<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_ElmoGDCBellCoEParams" Id="{eea38cef-05ec-41dc-812e-61dbe5536e45}">
    <Declaration><![CDATA[TYPE ST_ElmoGDCBellCoEParams :
STRUCT
		//Drive Reference (for CoE)
		stDriveRef	 :	ST_DriveRef; //Note, ignore the ams id and type parameters for our purposes.
		//Ams id comes from a linked global variable
		stPlcDriveRef AT %I* : ST_PlcDriveRef;
		
		AmsID	:	T_AmsNetId;
		nSlave	:	UINT;
		
		//Additional drive parameters
		//5V supply for encoders/ misc
		ui5VSupply :	UINT;
		//Drive temperature, C
		uiDriveTemp	:	UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>