<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_StepperStatus" Id="{62c2bf19-5ac7-4dbf-b20a-97bd31b64ec2}">
    <Declaration><![CDATA[TYPE ST_StepperStatus :
STRUCT
	bEnable: BOOL;
	bReset: BOOL;
	bExecute: BOOL;
	nCommand: UINT;
	nCmdData: UINT;
	fVelocity: LREAL;
	fPosition: REAL;
	fAcceleration: LREAL;
	fDeceleration: LREAL;
	bJogFwd: BOOL;
	bJogBwd: BOOL;
	bLimitFwd: BOOL;
	bLimitBwd: BOOL;
	fOverride: LREAL := 100;
	bHomeSensor: BOOL;
	bEnabled: BOOL;
	bError: BOOL;
	nErrorId: UDINT;
	fActVelocity: LREAL;
	fActPosition: LREAL;
	rActPosition: REAL;
	rActVelocity: REAL;
	fActDiff: LREAL;
	bHomed:BOOL;
	bBusy:BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>